--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <div class="container">
          <nav class="navbar" id="navbar">
       <ul class="nav-link" id="nav-links">
-        <li class="main_links"><a href="">Home</a></li>
-        <li class="main_links"><a href="">About</a></li>
-        <li class="Products"><a href=""><span class="product1">Products</span></a>
+        <li class="main_links"><a href="#">Home</a></li>
+        <li class="main_links"><a href="#">About</a></li>
+        <li class="Products"><a href="#"><span class="product1">Products</span></a>
           <ul class="dropdown">
             <li><a href="">Pillows</a></li>
             <li><a href="">Bedsheets</a></li>
             <li><a href="">Comfortors</a></li>
           </ul>
         </li>
-        <li class="main_links"><a href="">Team</a></li>
-        <li class="main_links"><a href="">FAQ's</a></li>
-        <li class="main_links"><a href="">Contact Us</a></li>
-        <!-- <div class="icons" style="margin-left: 50px;"> -->
-        <li class="main_links"><a href=""><img src="images/Insta.png" alt=""></a></li>
+        <li class="main_links"><a href="#">Team</a></li>
+        <li class="main_links"><a href="#">FAQ's</a></li>
+        <li class="main_links"><a href="#">Contact Us</a></li>
+  
+        <li class="main_links"><a href="#"><img src="images/Insta.png" alt=""></a></li>
       </ul>
       
     </nav>
@@ -45,9 +45,17 @@
 <div class="hero" id="hero">
  CRAFTING BEST PILLOWS
 </div>
+
 </div>
+
 </div>
-   <!-- <main><div>hello</div></main> -->
+  <main>
+<div class="image-wrapper">
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+    </div>
+  </main>
    <script src="script.js"></script>
 </body>
 </html>
